fix: fix flex overflow issue

--- a/front/src/components/common/Progress/progress.module.scss
+++ b/front/src/components/common/Progress/progress.module.scss
@@ -1,3 +1,15 @@
 .wrapper {
-  width: 80px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+  width: 150px;
+
+  .bar {
+    width: 55%;
+  }
+
+  .text {
+    width: 20%;
+  }
 }
