--- a/front/src/components/tables/table.module.scss
+++ b/front/src/components/tables/table.module.scss
@@ -1,5 +1,5 @@
 .table {
-  max-width: 60%;
+  max-width: 100%;
   min-width: 0;
   min-height: 0;
 
